[gd_scene load_steps=2 format=3 uid="uid://card_preview"]

[ext_resource type="Script" path="res://scripts/ui/card_preview.gd" id="1_card_preview"]

[node name="CardPreview" type="Control"]
layout_mode = 0
custom_minimum_size = Vector2(700, 500)
mouse_filter = 0
script = ExtResource("1_card_preview")

[node name="MainContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CardContainer" type="VBoxContainer" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_minimum_size = Vector2(260, 0)

[node name="PreviewCard" type="Control" parent="MainContainer/CardContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(260, 0)

[node name="ExplanationPanel" type="Panel" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(300, 0)

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/ExplanationPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="ExplanationContent" type="VBoxContainer" parent="MainContainer/ExplanationPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MainContainer/ExplanationPanel/ScrollContainer/ExplanationContent"]
unique_name_in_owner = true
layout_mode = 2
text = "效果说明"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 20

